[package]
name = "vpci_client"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
vpci_protocol.workspace = true
vmbus_async.workspace = true
vmbus_channel.workspace = true
vmbus_ring.workspace = true

tracelimit.workspace = true

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
