[package]
name = "vpci_client"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
pci_core.workspace = true
vpci_protocol.workspace = true
vmbus_async.workspace = true
vmbus_channel.workspace = true
vmbus_ring.workspace = true
vmcore.workspace = true

inspect.workspace = true
mesh.workspace = true
pal_async.workspace = true
guestmem.workspace = true
tracelimit.workspace = true

anyhow.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tracing.workspace = true
zerocopy.workspace = true

[dev-dependencies]
chipset_device.workspace = true
closeable_mutex.workspace = true
test_with_tracing.workspace = true
vpci.workspace = true
guid.workspace = true
async-trait.workspace = true
vmbus_core.workspace = true
mesh.workspace = true
task_control.workspace = true

[lints]
workspace = true
