[package]
name = "vpci_relay"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
chipset_device.workspace = true
pci_core.workspace = true
vpci_protocol.workspace = true
vpci_client.workspace = true
vmbus_async.workspace = true
vmbus_channel.workspace = true
vmbus_ring.workspace = true
vmcore.workspace = true

inspect.workspace = true
mesh.workspace = true
pal_async.workspace = true
guestmem.workspace = true
tracelimit.workspace = true

anyhow.workspace = true
futures.workspace = true
futures-concurrency.workspace = true
parking_lot.workspace = true
slab.workspace = true
thiserror.workspace = true
tracing.workspace = true
zerocopy.workspace = true

[dev-dependencies]
closeable_mutex.workspace = true
test_with_tracing.workspace = true
vpci.workspace = true
guid.workspace = true
async-trait.workspace = true
vmbus_core.workspace = true
mesh.workspace = true
task_control.workspace = true

[lints]
workspace = true
